File Name: CHANGES

03/05/2015 FASP 1.8.5:
- Fix a bug in BSR AMG.
- Add some comments and reference for GCR.
- Add a new version of BiCGstab implementation.
- Update regeression results.

02/15/2015 FASP 1.8.4:
- Add an interface to Intel MKL PARDISO.
- Add PARDISO option for coarse solver of AMG.
- Remove some warnings.
- Test GCC 5.3.
- Reformat CMakeFile.
- Update developer list.
- Update website and documentation.

11/02/2015 FASP 1.8.3:
- Fixed the broken FASP package on fasp.sf.net.

10/18/2015 FASP 1.8.2:
- Removed password protect from fasp.sf.net.
- Updated the webpage and documentation.
- Added more output for Makefiles and INSTALL.
- Update VS10 solution according to structure changes.
- Update Makefile(s) in tutorial and test subdirectories. 
- Added "write_config.cmake" to $(faspsolver)/modules which writes 
  CC, FC, CXX, and FASP_INSTALL_PREFIX variables so that they can 
  be included from Makefiles in test tutorial or user defined ones.
- Updated userguide.tex saying that the tests in $(faspsolver)/test 
  and the examples in $(faspsolver)/tutorial can be build with both
  "cmake" as well as custom created Makefile(s).
- Updated userguide including listing of Config.mk.
- Update building strategy: build library and examples separately.
- Update the documentation (user guide) accordingly. 
- Remove forts_ns.h which was a header included by several source files
  but never used by them. 
- Separate include to two parts base/include for FASP headers and 
  base/extra/include for external headers.
- Add Makefiles for test and tutorial.
- Update tutorial examples in user's guide.
- Update faspsolver webpage and documentation.
- Add a tutorial example for BSR matrices.
- Fix a few small format problems.
- Skip some checking steps in PCG if convergence rate is OK.
- Update test/ini/ua.dat.

10/12/2015 FASP 1.8.1:
- Add `const' to declaring constant variables.
- Check regression results again.
- Check and remove a few deprecated functions.